💸🏞 Updated with Glitch

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
       <ul class="unstyled-list">
         <li>💬 <a href="https://twitter.com/ditastructure">Twitter</a></li>
         <li>🎮 <a href="https://www.twitch.tv/ditastructure">Twitch</a></li>
-        <li>💻 <a href="https://">GitHub</a></li>
+        <li>💻 <a href="https://github.com/ditastructure/closed-captioning">GitHub</a></li>
       </ul>
     </section>
   
