🍢🚲 Updated with Glitch

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css">
+    <link rel="icon" type="image/png" href="https://cdn.glitch.com/08650d2e-f616-4fad-88a6-3706fa068ded%2Fcc-logo.jpg?v=1566854489647">
   </head>  
   <body>
     <section id="signed-out-section" hidden>
@@ -50,7 +51,7 @@
       <h2>
         👋 About me 
       </h2>
-      <p role="presentation">
+      <p aria-hidden="true">
         (●´ω｀●)
       </p>
       <p>
@@ -91,7 +92,7 @@
         <p>
           Click the start button below 👇 and start talking to begin the closed captioning process. Then add the Closed Captioning extension to your Twitch dashboard so your viewers can see the captions!
         </p>
-        <p role="presentation">
+        <p aria-hidden="true">
           (ﾉ◕ヮ◕)ﾉ*:･ﾟ✧
         </p>
       </details>
