--- a/public/viewer.html
+++ b/public/viewer.html
@@ -8,6 +8,7 @@
     
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css">
+    <link rel="icon" type="image/png" href="https://cdn.glitch.com/08650d2e-f616-4fad-88a6-3706fa068ded%2Fcc-logo.jpg?v=1566854489647">
   </head>  
   <body>
     <span id="viewer" role="log" aria-live="polite"></span>
